# jumper

./: .gitignore  Cargo.toml  README.md  notes.txt
assets/character_info/: marisa_info.rs
assets/sprites/lenneth/: idle_anim.aseprite  idle_set.aseprite
assets/sprites/touhou/marisa_kirisame/: marisa_sprite_indeces.txt  marisa_spritesheet.aseprite  marisa_stats.json
src/: components.rs  events.rs  main.rs  systems.rs
src/game/: components.rs  debugger_styles.rs  mod.rs  resources.rs  systems.rs
src/game/debugger_systems/: debugger_interactions.rs  debugger_layout.rs  mod.rs
src/game/enemy/: components.rs  mod.rs  systems.rs
src/game/player/: components.rs  marisa_constants.rs  mod.rs  systems.rs
src/main_menu/: mod.rs  styles.rs  systems.rs
src/main_menu/systems/: interactions.rs  layout.rs
