[package]
name = "jumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.0"
rand = "0.8.5"
nalgebra = "0.32.3"
bevy_framepace = "0.14.1"
serde_json = "1.0"
#bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }